keycloak/deployment.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
---
# Keycloak Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: me-central2-docker.pkg.dev/b2b-portal-uat-saudi-re/gcp-uat-b2bportal-gar-001/keycloak:cf5279d # Or a specific version
        args: ["start", "--cache-stack=kubernetes", "--spi-login-protocol-openid-connect-legacy-logout-redirect-uri=true","--hostname-strict=false"]
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: keycloak-logs
          mountPath: /opt/keycloak/standalone/log
      volumes:
      - name: keycloak-logs
        emptyDir: {}
---
# Expose Keycloak Service via LoadBalancer (or NodePort)
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: https
    port: 8443
    targetPort: 8443
  - name: jgroup
    port: 7600
    targetPort: 7600

  selector:
    app: keycloak
  type: LoadBalancer
